Fix adding snippets to post more than one time; Prevent SyntaxHighlighter features initialization when loaded page does not need them; Fix snippets alignment when located in comment;

--- a/forum/qa-theme/SnowFlat/qa-styles.css
+++ b/forum/qa-theme/SnowFlat/qa-styles.css
@@ -5113,7 +5113,7 @@ form div.qa-q-view-content
 }
 
 .entry-content.comment-snippets {
-	padding-top: 10px;
+	padding-top: 15px;
 }
 
 .qa-q-view-meta,
